<resources>
    <string name="app_name">DukeTutor</string>
    <string name="action_add_new">Add new</string>
    <string name="action_skip">Skip</string>
    <string name="action_sumbit_form">Submit</string>
    <string name="session_title">Title</string>
    <string name="session_description">Description</string>
    <string name="session_profile_head">Your Tutor Session:</string>
    <string-array name="week_array">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="search_hint">Search class...</string>
    <string name="title_activity_test">DukeTutor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="feedback_hint">Please enter your feedback for this tutor session.</string>
    <string name="title_activity_msg_detail">DukeTutor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Title_search">Search</string>
    <string name="Title_message">Message</string>
    <string name="Title_application">Application</string>
    <string name="Title_me">Me</string>
    <string name="applied_session">Applied Session:</string>
    <string name="posted_session">Posted Session:</string>
    <string name="message_received">Message Received:</string>
    <string name="session_edit">Edit</string>
    <string name="session_apply">Apply</string>
    <string name="session_detail_feedback">Feedback</string>
    <string name="feedback_session">Feedback for completed sessions:</string>
    <string name="add_session">Add New</string>
    <string name="delete_session">Delete</string>
    <string name="profile_finish">finish</string>
</resources>
