<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/ic_my_search_design"
        android:title="@string/Title_search"
        android:visible="true" />

    <item
        android:id="@+id/navigation_message"
        android:enabled="true"
        android:icon="@drawable/ic_my_message_design"
        android:title="@string/Title_message"
        android:visible="true" />

    <item
        android:id="@+id/navigation_application"
        android:enabled="true"
        android:icon="@drawable/ic_my_application_design"
        android:title="@string/Title_application"
        android:visible="true" />

    <item
        android:id="@+id/navigation_me"
        android:enabled="true"
        android:icon="@drawable/ic_my_me_design"
        android:title="@string/Title_me"
        android:visible="true" />

</menu>
